# aiconfigurator

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini
.claude/rules/: generator-development.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: support_matrix_request.md
.github/workflows/: build-test.yml  common.ps1  copyright-check.ps1  create-charts.yml  daily-support-matrix-release.yml  daily-support-matrix.yml  deploy-support-matrix-page.yml  lint.yml
collector/: README.md  README_oneccl_xpu.md  __init__.py  collect.py  collect_NCCL.py  collect_all_reduce.py  collect_comm.sh  collect_nccl.py  collect_oneccl_xpu.py  common_test_cases.py  helper.py  registry_types.py  version_resolver.py
collector/deep_collector/: README.md  extract_data.py  test_internode.py  test_intranode.py  test_low_latency.py  utils.py
collector/sglang/: README.md  collect_attn.py  collect_deepep_moe.py  collect_gdn.py  collect_gemm.py  collect_mla.py  collect_mla_bmm.py  collect_mla_module.py  collect_mlp.py  collect_moe.py  collect_normal_attn.py  collect_wideep_deepep_moe.py  registry.py
collector/slurm_comm_collector/: README.md  collect_allreduce.py  collect_trtllm_alltoall.py  cvt_log_to_perf_txt.py  slurm_custom_ar_2gpu.sh  slurm_custom_ar_4gpu.sh  slurm_nccl_test_12node48gpu.sh  slurm_nccl_test_16node64gpu.sh  slurm_nccl_test_1node2gpu.sh  slurm_nccl_test_1node4gpu.sh  slurm_nccl_test_2node8gpu.sh  slurm_nccl_test_4node16gpu.sh  slurm_nccl_test_8node32gpu.sh  submit_trtllm_alltoall.sh
collector/trial0/: context_attention_perf.txt  context_mla_perf.txt  custom_allreduce_perf.txt  gemm_perf.txt  generation_attention_perf.txt
collector/trial2/: context_attention_perf.txt
collector/trtllm/: collect_attn.py  collect_computescale.py  collect_gdn.py  collect_gemm.py  collect_gemm_trt.py  collect_mamba2.py  collect_mla.py  collect_mla_1_1rc2.py  collect_mla_bmm.py  collect_mla_module.py  collect_mla_v1.py  collect_mla_v2.py  collect_moe.py  collect_moe_pre_0_20.py  collect_moe_pre_1_0.py  collect_moe_v1.py  collect_moe_v2.py  collect_moe_v3.py  collect_wideep_moe_compute.py  registry.py
docker/: Dockerfile
docs/: PR_DESCRIPTION_MOE_EXTRAPOLATION.md  add_a_new_model.md  advanced_tuning.md  cli_user_guide.md  dynamo_deployment_guide.md  generator_overview.md  index.html
tests/: conftest.py
(+777 files in other folders)
